src/main/kube/deploy.envsubst.yaml
---

# Deployment descriptor
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: "tester"
    app.kubernetes.io/component: "tester"
    app.kubernetes.io/part-of: "tester"
    app.kubernetes.io/instance: "tester-main"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  name: "tester"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "tester"
      app.kubernetes.io/component: "tester"
      app.kubernetes.io/part-of: "tester"
      app.kubernetes.io/instance: "tester-main"
      app.kubernetes.io/version: "1.0-SNAPSHOT"
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path:  "/actuator/prometheus"
      labels:
        app.kubernetes.io/name: "tester"
        app.kubernetes.io/component: "tester"
        app.kubernetes.io/part-of: "tester"
        app.kubernetes.io/instance: "tester-main"
        app.kubernetes.io/version: "1.0-SNAPSHOT"
    spec:
      containers:
      - name: tester
        image: "${localregistry}/tester:1.0-SNAPSHOT"
        imagePullPolicy: "Always"
        livenessProbe:
          httpGet:
            path: "/actuator/health"
            port: 8081
            scheme: "HTTP"
          initialDelaySeconds: 0
          successThreshold: 1
          periodSeconds: 3
          failureThreshold: 10 
        readinessProbe:
          httpGet:
            path: "/actuator/health"
            port: 8081
            scheme: "HTTP"
          initialDelaySeconds: 0
          successThreshold: 1
          periodSeconds: 3
          failureThreshold: 10 
        resources:
          limits:
            cpu: "1.0"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "128Mi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/deployments/tls"
          name: "tls-secret-volume"
          readOnly: true
        - mountPath: "/deployments/config"
          name: "prop-secret-volume"
          readOnly: true
      volumes:
      - name: "tls-secret-volume"
        secret:
          defaultMode: 420
          secretName: "tester-tls-secret"
      - name: "prop-secret-volume"
        secret:
          defaultMode: 420
          secretName: "tester-prop-secret"
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/name: "tester"
    app.kubernetes.io/component: "tester"
    app.kubernetes.io/part-of: "tester"
    app.kubernetes.io/instance: "tester-main"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  name: "tester"
spec:
  type: ClusterIP
  ports:
  - name: "http"
    port: 8080
    protocol: "TCP"
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "tester"
    app.kubernetes.io/component: "tester"
    app.kubernetes.io/part-of: "tester"
    app.kubernetes.io/instance: "tester-main"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tester
  labels:
    app.kubernetes.io/name: "tester"
    app.kubernetes.io/component: "tester"
    app.kubernetes.io/part-of: "tester"
    app.kubernetes.io/instance: "tester-main"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: tester.${kube_ingress_root_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tester
            port:
              number: 8080
---
